[project]
name = "top-coder-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
